fixed alignment of keys with key text

--- a/app/assets/stylesheets/styles/components/map/_map.scss
+++ b/app/assets/stylesheets/styles/components/map/_map.scss
@@ -200,6 +200,7 @@
 
 .eez-map-legend {
   font-size: 0.7rem;
+  line-height: 1.7;
   height: 11%;
   width: 100%;
   display: flex;
@@ -216,7 +217,7 @@
     border: $border;
     border-radius: 100%;
     margin-right: $key-margin;
-    width: $key-size; height: $key-size;
+    width: $key-size * 2; height: $key-size * 2;
     display: block;
   }
 
